test: restore Java 8-compatible file reading